Muita mudanca : mudancas nas bibliotecas do pom; No acesso do DAO e do Servico; No mapeamento das entidades(Nao estavam funcionando corretamente); Na geracao dos popups (Agora com Javascript); Implementacao da inicializacao do mapa com os marcadores; Implementacao do cadastro de marcadores; Modificacoes no css das infowindows; Implementacao dos marcadores dinamicos;

--- a/src/main/webapp/resources/css/header.css
+++ b/src/main/webapp/resources/css/header.css
@@ -1,5 +1,4 @@
-/* VERDE CLARO : 82DF12 */
-/* VERDE ESCURO : 088B1B */
+/* VERDE : #2A993A */
 /* CINZA CLARO : E4E4E4 */
 /* CINZA ESCURO : D3D3D3 */
 
