--- a/src/main/webapp/resources/css/general.css
+++ b/src/main/webapp/resources/css/general.css
@@ -1,5 +1,4 @@
-/* VERDE CLARO : 82DF12 */
-/* VERDE ESCURO : 088B1B */
+/* VERDE : #2A993A */
 /* CINZA CLARO : E4E4E4 */
 /* CINZA ESCURO : D3D3D3 */
 
@@ -11,6 +10,8 @@
 body{
 	font-size: 16px;
 	font-family: Futura Light !important;
+	
+	letter-spacing: 0.12em;
 	
 	overflow: hidden;
 }
