--- a/src/main/webapp/resources/css/index.css
+++ b/src/main/webapp/resources/css/index.css
@@ -1,5 +1,4 @@
-/* VERDE CLARO : 82DF12 */
-/* VERDE ESCURO : 088B1B */
+/* VERDE : #2A993A */
 /* CINZA CLARO : E4E4E4 */
 /* CINZA ESCURO : D3D3D3 */
 
@@ -8,10 +7,6 @@
 /* ----------------------------------------------------------------------------- */
 div.trix-container-loc-list{
 	padding: 0 10px;
-}
-
-div#trix-container-map{
-	padding: 0 0 0 0;
 }
 
 
