--- a/src/main/webapp/resources/css/map-popup.css
+++ b/src/main/webapp/resources/css/map-popup.css
@@ -1,5 +1,4 @@
-/* VERDE CLARO : 82DF12 */
-/* VERDE ESCURO : 088B1B */
+/* VERDE : #2A993A */
 /* CINZA CLARO : E4E4E4 */
 /* CINZA ESCURO : D3D3D3 */
 
@@ -39,29 +38,30 @@ div#trix-container-map-popup:HOVER{
 	opacity: 1.0;
 }
 
+div#trix-container-map-popup-content{
+	position: relative;
+	top: 0;
+	left: 0;
+	
+	max-height: 280px;
+	
+	overflow: auto;
+}
+
 
 /* --------------------------- MAP POPUP MESSAGES ------------------------------- */
-div.trix-map-popup-list div#trix-container-messages,
-div.trix-map-popup-register div#trix-container-messages
-{
+div#trix-container-messages{
 	margin: 10px 0px 10px 0px;
 	padding: 4px 4px 4px 4px;
 	
 	text-align: center;
-}
-
-div.trix-map-popup-list div#trix-container-messages span,
-div.trix-map-popup-register div#trix-container-messages span
-{
-	color: #505050;
 	
-	font-size: 120%;
-	font-weight: 600;
+	visibility: hidden;
 }
 
 
 /* -------------------------- MAP POPUP SEARCH --------------------------------- */
-div.trix-map-popup-search{
+div#trix-container-search{
 	text-align: center;
 	
 	margin: 10px 0px 10px 0px;
@@ -69,15 +69,22 @@ div.trix-map-popup-search{
 
 
 /* --------------------------- MAP POPUP LIST ---------------------------------- */
-div.trix-map-popup-container-list div.trix-container-list-item{
+div.trix-map-popup-list div.trix-container-list-item{
 	width: 96%;
 	max-height: 250px;
 	
-	background: #ECECEC;
+	background-color: #ECECEC;
+	background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(153,153,153,0.65) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(153,153,153,0.65))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(153,153,153,0.65) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(153,153,153,0.65) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(153,153,153,0.65) 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(153,153,153,0.65) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6999999',GradientType=0 ); /* IE6-9 */
+
+	margin: 0 0 4px 10px;
 	
-	margin: 0 0 0 10px;
-	
-	border: 1px solid #C5C5C5;
+	border: 1px solid #808080;
 	border-radius: 4px;
 	-ms-border-radius: 4px;
 	-moz-border-radius: 4px;
@@ -87,24 +94,25 @@ div.trix-map-popup-container-list div.trix-container-list-item{
 	overflow: auto;
 }
 
-div.trix-map-popup-container-list div.trix-container-list-item div.trix-container-item-name{
+div.trix-map-popup-list div.trix-container-list-item div.trix-container-item-name{
 	color: #000;
 	
-	padding: 4px 4px 4px 10px;
+	padding: 4px 4px 8px 10px;
 	
-	border-right: 1px solid #C5C5C5;
+	border-right: 1px solid #808080;
 }
 
-div.trix-map-popup-container-list div.trix-container-list-item div.trix-container-item-name:HOVER{
+div.trix-map-popup-list div.trix-container-list-item div.trix-container-item-name:HOVER{
+	color: #FFF;
+	background: #505050;
+	
 	cursor: pointer;
-	
-	text-decoration: underline;
 }
 
-div.trix-map-popup-container-list div.trix-container-list-item div.trix-container-item-buttons{
+div.trix-map-popup-list div.trix-container-list-item div.trix-container-item-buttons{
 	text-align: center;
 	
-	padding: 10px 0 0 0;
+	padding: 6px 0 6px 0;
 }
 
 
@@ -117,6 +125,9 @@ div.trix-map-popup-register div.trix-map-popup-title
 	
 	text-align: center;
 	
+	font-size: 140%;
+	font-weight: 600;
+	
 	margin: 0 0 0 0;
 	padding: 10px 10px 10px 10px;
 	
@@ -128,7 +139,7 @@ div.trix-map-popup-register div.trix-map-popup-title
 }
 
 div.trix-map-popup-row{
-	margin:  0 0 10px 0;
+	margin:  0 0 2.5% 0;
 }
 
 div.trix-map-popup-row div.trix-map-popup-col-left{
@@ -136,7 +147,7 @@ div.trix-map-popup-row div.trix-map-popup-col-left{
 	
 	text-align: right;
 	
-	font-size: 130%;
+	font-size: 160%;
 	font-weight: 600;
 	
 	padding: 2px 10px 0 0;
@@ -164,10 +175,16 @@ div.trix-map-popup-row div.trix-map-popup-col-right input{
 	
 	padding: 2px 0px 4px 6px;
 	
-	font-size: 110%;
+	font-size: 140%;
+	
+	letter-spacing: 0.04em;
 }
 
-div.trix-map-popup-search input{
+div.trix-map-popup-row div.trix-map-popup-col-right input.error{
+	border-color: #FF0000;
+}
+
+div#trix-container-search input{
 	position: relative;
 	top: -14px;
 	
@@ -188,30 +205,9 @@ div.trix-map-popup-search input{
 
 
 /* ----------------------------------------------------------------------------- */
-/* 								    TEXTAREAs 									 */
-/* ----------------------------------------------------------------------------- */
-div.trix-map-popup-row div.trix-map-popup-col-right textarea{
-	width: 90%;
-	
-	border-color: #C5C5C5;
-	border-radius: 4px;
-	-ms-border-radius: 4px;
-	-moz-border-radius: 4px;
-	-khtml-border-radius: 4px;
-	-webkit-border-radius: 4px;
-	
-	padding: 4px 4px 4px 4px;
-	
-	font-size: 110%;
-	
-	resize: none;
-}
-
-
-/* ----------------------------------------------------------------------------- */
 /* 								     BUTTONs 									 */
 /* ----------------------------------------------------------------------------- */
-div.trix-map-popup-search button.trix-button.trix-button-search{
+div#trix-container-search button.trix-button.trix-button-search{
 	color: transparent;
 	background: url("/TrixLoc/resources/images/search-icon.png");
 	background-position: center center;
@@ -220,32 +216,96 @@ div.trix-map-popup-search button.trix-button.trix-button-search{
 	width: 48px;
 	height: 48px;	
 	
-	border: 1px solid transparent;
-	border-radius: 4px;
-	-ms-border-radius: 4px;
-	-moz-border-radius: 4px;
-	-khtml-border-radius: 4px;
-	-webkit-border-radius: 4px;
+	border: 2px solid #808080;
+	border-radius: 8px;
+	-ms-border-radius: 8px;
+	-moz-border-radius: 8px;
+	-khtml-border-radius: 8px;
+	-webkit-border-radius: 8px;
 }
 
 div.trix-container-list-item div.trix-container-item-buttons button.trix-button-edit{
 	width: 30px;
 	height: 30px;
 	
-	margin: 0 0 0 4px;
+	margin: 0 0 0 0;
 	
 	background: url("/TrixLoc/resources/images/edit-icon.png");
 	background-position: center center;
 	background-repeat: no-repeat;
+	
+	border: 1px solid #505050;
+	border-radius: 6px;
+	-ms-border-radius: 6px;
+	-moz-border-radius: 6px;
+	-khtml-border-radius: 6px;
+	-webkit-border-radius: 6px;
 }
 
 div.trix-container-list-item div.trix-container-item-buttons button.trix-button-delete{
 	width: 30px;
 	height: 30px;
 	
-	margin: 0 0 0 4px;
+	margin: 0 0 0 10px;
 	
 	background: url("/TrixLoc/resources/images/delete-icon.png");
 	background-position: center center;
 	background-repeat: no-repeat;
+	
+	border: 1px solid #505050;
+	border-radius: 6px;
+	-ms-border-radius: 6px;
+	-moz-border-radius: 6px;
+	-khtml-border-radius: 6px;
+	-webkit-border-radius: 6px;
+}
+
+
+/* ----------------------------------------------------------------------------- */
+/* 								      SPANs 									 */
+/* ----------------------------------------------------------------------------- */
+div#trix-container-messages span{
+	display: block;
+	
+	color: rgba(80, 80, 80, 1.00);
+	border-color: rgba(50, 50, 50, 1.00);
+	background-color: rgba(213, 213, 213, 0.70);
+	
+	border: 1px solid;
+	border-radius: 4px;
+	-ms-border-radius: 4px;
+	-moz-border-radius: 4px;
+	-khtml-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	
+	font-size: 120%;
+	font-weight: 600;
+	
+	margin: 0 0 10px 0;
+	padding: 4px 8px 4px 8px;
+}
+
+div#trix-container-messages span.info{
+	color: rgba(0, 0, 181, 1.00);
+	background-color: rgba(0, 0, 255, 0.20);
+}
+
+div#trix-container-messages span.warning{
+	color: rgba(192, 185, 31, 1.00);
+	background-color: rgba(255, 242, 0, 0.35);
+}
+
+div#trix-container-messages span.error{
+	color: rgba(181, 0, 0, 1.00);
+	background-color: rgba(255, 0, 0, 0.20);
+}
+
+div#trix-container-messages span.success{
+	color: rgba(0, 181, 0, 1.00);
+	background-color: rgba(0, 255, 0, 0.20);
+}
+
+div.trix-map-popup-list div.trix-container-list-item div.trix-container-item-name span{
+	font-size: 140%;
+	font-weight: 400;
 }
